# agave

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  build.zig  build.zig.zon  models
.github/: dependabot.yml
.github/workflows/: ci.yml  golden_tests.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  ROADMAP.md.bak  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: nemotron-nano-garbage-output.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  DOCUMENTATION.md  IDEAS.md  KERNELS.md  MEGAKERNEL.md  MODELS.md  PARALLELISM.md  TEST_MATRIX.md  TODO.md
research/: gemma3_ref.py
research/kernels/: README.md  autotune.py  baseline.json  generate_golden.py  optimization_log_old.tsv  pyproject.toml  reference.py  registry.py  results.tsv  results_old.tsv  run.py  search_spaces.toml  vision_compare.py  vision_reference.py
src/: arch.zig  calibrate.zig  chat_template.zig  cli.zig  display.zig  grammar.zig  image.zig  main.zig  metrics.zig  micro_bench.zig  perf.zig  pull.zig  rate_limiter.zig  readline.zig  recipe.zig  scheduler.zig  server.zig  term.zig  test_exports.zig  thread_pool.zig
src/backend/: cpu.zig  (+9 more)
tests/: harness.py  rocm_kernel_test.zig  sdpa_harness.zig  sdpa_oracle.zig  test_cuda_sdpa.zig  test_metal_sdpa.zig  test_rocm_kernel.zig
(+344 files in other folders)
